Refactor | #149 | @lcomment | 코드 컨벤션 적용