@@ -1,8 +1,8 @@
 package com.cakk.api.mapper;
 
+import static java.util.Objects.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -15,8 +15,8 @@ import com.cakk.domain.mysql.entity.shop.CakeShopLink;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class LinkMapper {
 
-	public static CakeShopLink supplyCakeShopLinkByInstagram(String instagram) {
-		if (instagram == null) {
+	public static CakeShopLink supplyCakeShopLinkByInstagram(final String instagram) {
+		if (isNull(instagram)) {
 			return null;
 		}
 		return CakeShopLink.builder()
@@ -25,8 +25,8 @@ public class LinkMapper {
 			.build();
 	}
 
-	public static CakeShopLink supplyCakeShopLinkByKakao(String kakao) {
-		if (kakao == null) {
+	public static CakeShopLink supplyCakeShopLinkByKakao(final String kakao) {
+		if (isNull(kakao)) {
 			return null;
 		}
 		return CakeShopLink.builder()
@@ -35,8 +35,8 @@ public class LinkMapper {
 			.build();
 	}
 
-	public static CakeShopLink supplyCakeShopLinkByWeb(String web) {
-		if (web == null) {
+	public static CakeShopLink supplyCakeShopLinkByWeb(final String web) {
+		if (isNull(web)) {
 			return null;
 		}
 		return CakeShopLink.builder()
@@ -45,31 +45,7 @@ public class LinkMapper {
 			.build();
 	}
 
-	public static CakeShopLink supplyCakeShopLinkByWeb(CakeShop cakeShop, String web) {
-		return CakeShopLink.builder()
-			.linkKind(LinkKind.WEB)
-			.linkPath(web)
-			.cakeShop(cakeShop)
-			.build();
-	}
-
-	public static CakeShopLink supplyCakeShopLinkByInstagram(CakeShop cakeShop, String instagram) {
-		return CakeShopLink.builder()
-			.linkKind(LinkKind.INSTAGRAM)
-			.linkPath(instagram)
-			.cakeShop(cakeShop)
-			.build();
-	}
-
-	public static CakeShopLink supplyCakeShopLinkByKakao(CakeShop cakeShop, String kakao) {
-		return CakeShopLink.builder()
-			.linkKind(LinkKind.KAKAOTALK)
-			.linkPath(kakao)
-			.cakeShop(cakeShop)
-			.build();
-	}
-
-	public static List<CakeShopLink> supplyCakeShopLinksBy(CakeShop cakeShop, List<ShopLinkParam> links) {
+	public static List<CakeShopLink> supplyCakeShopLinksBy(final CakeShop cakeShop, final List<ShopLinkParam> links) {
 		return links.stream().map(link -> {
 			if (link.linkKind() == LinkKind.WEB) {
 				return supplyCakeShopLinkByWeb(cakeShop, link.linkPath());
@@ -78,6 +54,30 @@ public class LinkMapper {
 			} else {
 				return supplyCakeShopLinkByKakao(cakeShop, link.linkPath());
 			}
-		}).collect(Collectors.toList());
+		}).toList();
+	}
+
+	private static CakeShopLink supplyCakeShopLinkByWeb(final CakeShop cakeShop, final String web) {
+		return CakeShopLink.builder()
+			.linkKind(LinkKind.WEB)
+			.linkPath(web)
+			.cakeShop(cakeShop)
+			.build();
+	}
+
+	private static CakeShopLink supplyCakeShopLinkByInstagram(final CakeShop cakeShop, final String instagram) {
+		return CakeShopLink.builder()
+			.linkKind(LinkKind.INSTAGRAM)
+			.linkPath(instagram)
+			.cakeShop(cakeShop)
+			.build();
+	}
+
+	private static CakeShopLink supplyCakeShopLinkByKakao(final CakeShop cakeShop, final String kakao) {
+		return CakeShopLink.builder()
+			.linkKind(LinkKind.KAKAOTALK)
+			.linkPath(kakao)
+			.cakeShop(cakeShop)
+			.build();
 	}
 }
